--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ dist
 package-lock.json
 dist/static/css/app.880528a4a2113911f17b0150605f25c4.css
 dist/index.html
+dist/static/css/app.880528a4a2113911f17b0150605f25c4.css
